--- a/src/global.css
+++ b/src/global.css
@@ -9,3 +9,41 @@ body{
   background-color: var(--fundo);
   margin: 0;
 }
+
+.content-product{
+  width: 100%;
+}
+
+.title_product{
+  width: 80%;
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 0 auto;
+  text-transform: capitalize;
+  color: var(--fontcolor);
+}
+
+.list-product{
+  width: 80%;
+  margin: 5% auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer{
+  background-color: #fff;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--fontcolor);
+}
+
+.footer a{
+  text-decoration: none;
+  color: var(--fontcolor);
+  margin: .5rem;
+}
