--- a/src/components/CarouselDya/corousel.css
+++ b/src/components/CarouselDya/corousel.css
@@ -1,35 +1,77 @@
 .carousel-content {
-  margin: 3rem auto;
-  width: 80%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-.carousel-content img {
-  width: 280px;
-  height: 300px;
-  margin: 1rem;
-  object-fit: cover;
+.pic-ctn {
+  width: 100%;
+  height: 200px;
+  margin: 2rem;
+}
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+}
+
+.pic-ctn {
+  position: relative;
+  width: 82%;
+  height: 410px;
+  margin-top: 3rem;
+}
+
+.pic-ctn > img {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 100px);
+  opacity: 0;
+  animation: display 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
+img:nth-child(6) {
+  animation-delay: 8s;
+}
+
+.pic-ctn img {
+  width: 400px;
+  height: 400px;
   border-radius: 15px;
 }
 
-.styles-module_carousel-arrow__26sRw {
-  display: none;
-}
-
-.mobil-carousel {
-  display: none;
-}
-
-@media only screen and (max-width: 900px) {
-  .carousel-content {
-    width: 95%;
-    margin: 2rem auto;
-  }
-
-  .desktop-carousel{
-    display: none;
-}
-
-  .mobil-carousel {
-    display: block;
+@media only screen and (max-width: 600px) {
+  .pic-ctn {
+    width: 36%;
   }
 }
