--- a/src/components/ItemCategory/itemCategory.css
+++ b/src/components/ItemCategory/itemCategory.css
@@ -24,7 +24,7 @@
 
 .itemCategory_container .black_back {
   display: flex;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--black-400);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -40,7 +40,7 @@
 
 .itemCategory_container p {
   font-size: 2.3rem;
-  color: #fff;
+  color: var(--white);
 }
 
 @keyframes anona {
