--- a/src/components/ItemMenu/itemMenu.css
+++ b/src/components/ItemMenu/itemMenu.css
@@ -15,7 +15,7 @@
   z-index: 1;
 }
 
-.item-menu_content a{
+.item-menu_content a {
   display: flex;
 }
 
@@ -24,9 +24,9 @@
   height: 100%;
   z-index: 2;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.43);
+  background-color: var(--black-400);
   display: none;
-  color: white;
+  color: var(--white);
   font-size: 2.3rem;
   transition: 1s;
   display: flex;
