--- a/src/components/ItemProduct/itemProduct.css
+++ b/src/components/ItemProduct/itemProduct.css
@@ -29,14 +29,14 @@
 }
 
 .description {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--black-100);
   width: 100%;
   height: 100%;
   padding: 1% 4%;
   box-sizing: border-box;
   position: absolute;
   z-index: 2;
-  color: #fff;
+  color: var(--white);
   display: flex;
   align-items: flex-end;
   font-family: "Baloo 2", cursive;
