--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -26,7 +26,7 @@
 }
 
 .title_principal {
-  color: #fff;
+  color: var(--white);
   display: flex;
   align-items: center;
   position: relative;
@@ -36,7 +36,7 @@
 }
 
 .title_principal h1 {
-  color: #cd24b7;
+  color: var(--pink-dark);
   text-transform: uppercase;
   font-size: 4rem;
   margin-bottom: 1rem;
@@ -60,7 +60,7 @@
 
 @media only screen and (min-width: 1281px) {
   .title_principal h1 {
-    color: #cd24b7;
+    color: var(--pink-dark);
 
     text-transform: uppercase;
     font-size: 5rem;
@@ -77,8 +77,6 @@
 @media only screen and (max-width: 900px) {
   .home {
     display: block;
-    height: 100vh;
-    overflow: hidden;
   }
 
   .content_home {
