--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap");
-
-:root {
-  --fundo: #f9cfd3;
-  --fontcolor: #cd24b7;
-}
-
 body {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fff;
+  background-color: var(--white);
   margin: 0;
 }
 
@@ -35,7 +28,7 @@ figure {
   text-align: center;
   margin: 0 auto;
   text-transform: capitalize;
-  color: #cd24b7;
+  color: var(--pink-dark);
 }
 
 .list-product {
@@ -47,19 +40,19 @@ figure {
 }
 
 .footer {
-  background-color: #f7b2b9;
+  background-color: var(--pink-second);
   width: 100%;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: var(--white);
   z-index: 2;
 }
 
 .footer a {
   text-decoration: none;
-  color: #fff;
+  color: var(--white);
   margin: 0.5rem;
 }
 
