--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -75,6 +75,10 @@
 }
 
 @media only screen and (max-width: 900px) {
+  body {
+    background-color: #fe7484;
+  }
+
   .home {
     display: block;
   }
@@ -85,10 +89,11 @@
   }
 
   .content_picture {
-    bottom: auto;
-    top: auto;
-    left: auto;
-    right: auto;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
   }
   .content_picture img {
     filter: blur(2px);
@@ -99,7 +104,6 @@
 
   .content_picture figure {
     width: 100%;
-    height: 100vh;
   }
 
   .title_principal {
